--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-6">
                         <h1 class="mt-5">University of Washington</h1>
-                        <p>The UW is one of the world preeminent public universities. Our impact on individuals, our region and the world is profound — whether we are launching young people into a boundless future or confronting the grand challenges of our time through undaunted research and scholarship. Ranked No. 7 in the world on the U.S. News & World Report’s Best Global Universities rankings, the UW educates more than 54,000 students annually. We turn ideas into impact and transform lives and our world. For more about our impact, visit our news site, UW News.</p>
+                        <p style="background-color: aliceblue;">The UW is one of the world preeminent public universities. Our impact on individuals, our region and the world is profound — whether we are launching young people into a boundless future or confronting the grand challenges of our time through undaunted research and scholarship. Ranked No. 7 in the world on the U.S. News & World Report’s Best Global Universities rankings, the UW educates more than 54,000 students annually. We turn ideas into impact and transform lives and our world. For more about our impact, visit our news site, UW News.</p>
                     </div>
                 </div>
             </div>
