--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
             <div class="container background  px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">About UW</a>
+                <a class="navbar-brand" href="https://olithinivia.github.io/">About UW</a>
+                <a class="navbar-brand" href="https://www.washington.edu/news/?utm_source=whitebar&utm_medium=click&utm_campaign=news&utm_term=uwnews">UW NEWS</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-cllapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active"><a class="nav-link" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="https://olithinivia.github.io/">Home</a></li>
+                        <li class="nav-item actice"><a class="nav-link" href="https://olithinivia.github.io/!">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
                     </ul>
