--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-cllapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active"><a class="nav-link" href="https://olithinivia.github.io/">Home</a></li>
-                        <li class="nav-item actice"><a class="nav-link" href="https://olithinivia.github.io/!">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="https://olithinivia.github.io/">About UW</a></li>
+                        <li class="nav-item actice"><a class="nav-link" href="https://www.washington.edu/news/?utm_source=whitebar&utm_medium=click&utm_campaign=news&utm_term=uwnews!">UW NEWS</a></li>
                     </ul>
                 </div>
             </div>
